some java version changes